Downgrade to Java 17 compat